feat(hw-9) added header and banner blocks

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/src/assets/style/style.scss">
     <title>ActiveBox</title>
 </head>
 <body>
@@ -22,6 +25,11 @@
                     <path d="M174.373 12.2465L182.38 0.706514H183.539L174.953 12.9689L183.862 25.7472H182.721L174.373 13.6912L165.992 25.7472H164.885L173.794 12.9689L165.208 0.706514H166.367L174.373 12.2465Z" fill="white"/>
                 </svg>
             </a>
+            <div class="header__dropdown">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 18" fill="none">
+                    <path d="M0 0H24V3H0V0ZM0 7.5H24V10.5H0V7.5ZM0 15H24V18H0V15Z" fill="white"/>
+                </svg>
+            </div>
             <nav class="header__nav">
                 <a href="#features" class="header__link">FEATURES</a>
                 <a href="#works" class="header__link">WORKS</a>
