fix(hw-11): fix styles and html tag

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
             <button class="banner__btn">Find Out More</button>
         </div>
     </section>
-    <section id="features" class="features">
+    <div id="features" class="features">
         <div class="features__container">
             <div class="feature">
                 <div class="feature__icon">
@@ -118,6 +118,7 @@
                 <p class="feature__description">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
             </div>  
         </div>
-    </section>
+    </в>
+    <script src="assets/scripts/script.js"></script>
 </body>
 </html>
