--- a/src/index.html
+++ b/src/index.html
@@ -118,7 +118,7 @@
                 <p class="feature__description">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
             </div>  
         </div>
-    </в>
-    <script src="assets/scripts/script.js"></script>
+    </div>
+    <div class="works"></div>
 </body>
 </html>
