feat(hw-12): added html tags and images

--- a/src/index.html
+++ b/src/index.html
@@ -119,6 +119,65 @@
             </div>  
         </div>
     </div>
-    <div class="works"></div>
+    <div id="works" class="works">
+        <div class="works__container">
+            <div class="project">
+                <img class="project__wrapper-image" src="assets/media/image-1.png">
+                <div class="project__content">
+                    <h2 class="project__title">Project Name</h2>
+                    <p class="project__description">User Interface Design</p>
+                </div>
+            </div>
+            <div class="project">
+                <img class="project__wrapper-image" src="assets/media/image-2.png">
+                <div class="project__content">
+                    <h2 class="project__title">Project Name</h2>
+                    <p class="project__description">User Interface Design</p>
+                </div>
+            </div>
+            <div class="project">
+                <img class="project__wrapper-image" src="assets/media/image-3.png">
+                <div class="project__content">
+                    <h2 class="project__title">Project Name</h2>
+                    <p class="project__description">User Interface Design</p>
+                </div>
+            </div>
+            <div class="project">
+                <img class="project__wrapper-image" src="assets/media/image-4.png">
+                <div class="project__content">
+                    <h2 class="project__title">Project Name</h2>
+                    <p class="project__description">User Interface Design</p>
+                </div>
+            </div>
+            <div class="project">
+                <img class="project__wrapper-image" src="assets/media/image-5.png">
+                <div class="project__content">
+                    <h2 class="project__title">Project Name</h2>
+                    <p class="project__description">User Interface Design</p>
+                </div>
+            </div>
+            <div class="project">
+                <img class="project__wrapper-image" src="assets/media/image-6.png">
+                <div class="project__content">
+                    <h2 class="project__title">Project Name</h2>
+                    <p class="project__description">User Interface Design</p>
+                </div>
+            </div>
+            <div class="project">
+                <img class="project__wrapper-image" src="assets/media/image-7.png">
+                <div class="project__content">
+                    <h2 class="project__title">Project Name</h2>
+                    <p class="project__description">User Interface Design</p>
+                </div>
+            </div>
+            <div class="project">
+                <img class="project__wrapper-image" src="assets/media/image-8.png">
+                <div class="project__content">
+                    <h2 class="project__title">Project Name</h2>
+                    <p class="project__description">User Interface Design</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
