feat(hw-12): add styles for works block

--- a/src/index.html
+++ b/src/index.html
@@ -122,56 +122,56 @@
     <div id="works" class="works">
         <div class="works__container">
             <div class="project">
-                <img class="project__wrapper-image" src="assets/media/image-1.png">
+                <img class="project__wrapper-image" src="assets/media/image-1.jpg">
                 <div class="project__content">
                     <h2 class="project__title">Project Name</h2>
                     <p class="project__description">User Interface Design</p>
                 </div>
             </div>
             <div class="project">
-                <img class="project__wrapper-image" src="assets/media/image-2.png">
+                <img class="project__wrapper-image" src="assets/media/image-2.jpg">
                 <div class="project__content">
                     <h2 class="project__title">Project Name</h2>
                     <p class="project__description">User Interface Design</p>
                 </div>
             </div>
             <div class="project">
-                <img class="project__wrapper-image" src="assets/media/image-3.png">
+                <img class="project__wrapper-image" src="assets/media/image-3.jpg">
                 <div class="project__content">
                     <h2 class="project__title">Project Name</h2>
                     <p class="project__description">User Interface Design</p>
                 </div>
             </div>
             <div class="project">
-                <img class="project__wrapper-image" src="assets/media/image-4.png">
+                <img class="project__wrapper-image" src="assets/media/image-4.jpg">
                 <div class="project__content">
                     <h2 class="project__title">Project Name</h2>
                     <p class="project__description">User Interface Design</p>
                 </div>
             </div>
             <div class="project">
-                <img class="project__wrapper-image" src="assets/media/image-5.png">
+                <img class="project__wrapper-image" src="assets/media/image-5.jpg">
                 <div class="project__content">
                     <h2 class="project__title">Project Name</h2>
                     <p class="project__description">User Interface Design</p>
                 </div>
             </div>
             <div class="project">
-                <img class="project__wrapper-image" src="assets/media/image-6.png">
+                <img class="project__wrapper-image" src="assets/media/image-6.jpg">
                 <div class="project__content">
                     <h2 class="project__title">Project Name</h2>
                     <p class="project__description">User Interface Design</p>
                 </div>
             </div>
             <div class="project">
-                <img class="project__wrapper-image" src="assets/media/image-7.png">
+                <img class="project__wrapper-image" src="assets/media/image-7.jpg">
                 <div class="project__content">
                     <h2 class="project__title">Project Name</h2>
                     <p class="project__description">User Interface Design</p>
                 </div>
             </div>
             <div class="project">
-                <img class="project__wrapper-image" src="assets/media/image-8.png">
+                <img class="project__wrapper-image" src="assets/media/image-8.jpg">
                 <div class="project__content">
                     <h2 class="project__title">Project Name</h2>
                     <p class="project__description">User Interface Design</p>
