--- a/src/index.html
+++ b/src/index.html
@@ -303,6 +303,16 @@
             </div>
         </div>
     </div>
+    <div id="testimonials" class="testimonials">
+
+    </div>
+    <section id="download" class="download">
+        <div class="download__container">
+            <h2 class="download__title">Are You Ready to Start? Download Now For Free!</h2>
+            <p class="download__description">Fusce dapibus, tellus ac cursus commodo</p>
+            <button class="download__btn">download here</button>
+        </div>
+    </section>
     <script src="assets/scripts/script.js"></script>
 </body>
 </html>
