feat(hw-13): added testimonials block

--- a/src/index.html
+++ b/src/index.html
@@ -306,7 +306,7 @@
     </div>
     <div id="testimonials" class="testimonials swiper testimonialsSwiper">
         <div class="swiper-wrapper">
-            <div class="swiper-slide testimonials__container">
+            <div class="swiper-slide testimonials__slide">
                 <div class="testimonials__wrapper-image">
                     <img class="testimonials__image" src="assets/media/testimonials.jpg" alt="">
                 </div>
@@ -317,7 +317,7 @@
                     <p class="testimonials__author">Susan Sims, Interaction Designer at XYZ</p>
                 </div>
             </div> 
-            <div class="swiper-slide testimonials__container">
+            <div class="swiper-slide testimonials__slide">
                 <div class="testimonials__wrapper-image">
                     <img class="testimonials__image" src="assets/media/testimonials.jpg" alt="">
                 </div>
@@ -328,7 +328,7 @@
                     <p class="testimonials__author">Susan Sims, Interaction Designer at XYZ</p>
                 </div>
             </div> 
-            <div class="swiper-slide testimonials__container">
+            <div class="swiper-slide testimonials__slide">
                 <div class="testimonials__wrapper-image">
                     <img class="testimonials__image" src="assets/media/testimonials.jpg" alt="">
                 </div>
@@ -339,7 +339,7 @@
                     <p class="testimonials__author">Susan Sims, Interaction Designer at XYZ</p>
                 </div>
             </div> 
-            <div class="swiper-slide testimonials__container">
+            <div class="swiper-slide testimonials__slide">
                 <div class="testimonials__wrapper-image">
                     <img class="testimonials__image" src="assets/media/testimonials.jpg" alt="">
                 </div>
@@ -350,7 +350,7 @@
                     <p class="testimonials__author">Susan Sims, Interaction Designer at XYZ</p>
                 </div>
             </div> 
-            <div class="swiper-slide testimonials__container">
+            <div class="swiper-slide testimonials__slide">
                 <div class="testimonials__wrapper-image">
                     <img class="testimonials__image" src="assets/media/testimonials.jpg" alt="">
                 </div>
@@ -361,9 +361,8 @@
                     <p class="testimonials__author">Susan Sims, Interaction Designer at XYZ</p>
                 </div>
             </div> 
-            <div class="testimonials__pagination swiper-pagination"></div>
         </div>
-
+        <div class="swiper-pagination"></div>
     </div>
     <section id="download" class="download">
         <div class="download__container">
